...
  signInWrapper: {
    position: "absolute",
    top: 45,
    right: 30,
  },
  
  signInButton: {
    paddingVertical: 8,
    paddingHorizontal: 20,
    borderRadius: 28,
    borderWidth: 1,
    borderColor: "#A259FF",
    shadowColor: "#FFB6C1",
...
