...
  const handleItemPress = (name: string) => {
    console.log("Tapped on:", name);

    if (name === "Expenses") {
      setSelectedComponent(<ExpensesComponent />);
      setSelectedScreen("Expenses")
    } else if (name === "Saving Goal") {
      setSelectedComponent(<SavingGoalComponent />);
      setSelectedScreen("Saving Goal")
    } else if (name === "Budgets") {
      setSelectedComponent(<BudgetComponent />);
      setSelectedScreen("Budgets")
    } else {
...
