appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn:
    id: "signInButton"

- assertVisible: "Enter your email"

- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"

- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"

- tapOn: "Login"

- assertVisible: "Login successful!"
