appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn: "Sign in"

- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"

- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"

- tapOn: "Login"

- tapOn: "OK"

- assertVisible: "🔐 Two-Factor Authentication"

- tapOn:
    id: "otpInput"
- inputText:
    id: "otpInput"
    text: "123456"

- tapOn:
    id: "verifyOtpButton"

- tapOn: "Ok"

- assertVisible: "Saving Goal"
