appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn:
    id: "signInButton"

- assertVisible: "Enter your email"

- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"

- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"

- tapOn: "Login"

- assertVisible: "Login successful!"

- tapOn: "OK"


- inputText:
    id: "otpInput"
    text: "123456"

- tapOn:
    id: "verifyOtpButton"
- assertVisible: "Saving Goal"

- tapOn:
    text: "Sign out"
- assertVisible: "Login"
