appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn:
    text: "Sign in"

- tapOn:
    text: "Forgot Password?"

- tapOn:
    text: "📧 Enter your email"
- inputText:
    text: "📧 Enter your email"
    text: "dineshbali45@gmail.com"

- tapOn:
    text: "📨 Send OTP"

- tapOn: "OK"
- assertVisible: "🔢 Enter OTP"

- tapOn:
    text: "🔢 Enter OTP"
- inputText:
    text: "🔢 Enter OTP"
    text: "123456"

- tapOn:
    text: "✅ Verify OTP"
- tapOn: "OK"
- assertVisible: "🔑 Enter new password"

- tapOn:
    text: "🔑 Enter new password"
- inputText:
    text: "🔑 Enter new password"
    text: "gamer45"

- tapOn:
    text: "🔄 Reset Password"

- tapOn:
    text: "OK"

- assertVisible: "Login"
